--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 	<head>
 		<title>React App</title>
+		<script
+			src="https://kit.fontawesome.com/752db550c9.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body>
 		<div id="root"></div>
